--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  kakao_flutter_sdk_user: ^1.9.6
 
 dev_dependencies:
   flutter_test:
