--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   kakao_flutter_sdk_user: ^1.9.6
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -24,36 +25,46 @@ flutter:
   uses-material-design: true
 
   assets:
+    # images
     - assets/images/users_icon.png
     - assets/images/hamburger_icon.png
     - assets/images/test_user_image.jpeg
     - assets/images/arrow_drop_down_icon.png
     - assets/images/add_user_icon.png
+    - assets/images/temp_icon.png
+    - assets/images/temp_icon2x.png
+    - assets/images/kakao_login_button.png
+    # environment vars.
+    - .env
 
-fonts:
-  - family: PretendardVariable
-    font:
-      - asset: assets/fonts/PretendardVariable.ttf
-  - family: Pretendard
-    font:
-      - asset: assets/fonts/Pretendard-Thin.ttf
-        weight: 100
-      - asset: assets/fonts/Pretendard-ExtraLight.ttf
-        weight: 200
-      - asset: assets/fonts/Pretendard-Light.ttf
-        weight: 300
-      - asset: assets/fonts/Pretendard-Regular.ttf
-        weight: 400
-      - asset: assets/fonts/Pretendard-Medium.ttf
-        weight: 500
-      - asset: assets/fonts/Pretendard-SemiBold.ttf
-        weight: 600
-      - asset: assets/fonts/Pretendard-Bold.ttf
-        weight: 700
-      - asset: assets/fonts/Pretendard-ExtraBold.ttf
-        weight: 800
-      - asset: assets/fonts/Pretendard-Black.ttf
-        weight: 900
+  fonts:
+    - family: PretendardVariable
+      fonts:
+        - asset: assets/fonts/PretendardVariable.ttf
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/Pretendard-Thin.otf
+          weight: 100
+        - asset: assets/fonts/Pretendard-ExtraLight.otf
+          weight: 200
+        - asset: assets/fonts/Pretendard-Light.otf
+          weight: 300
+        - asset: assets/fonts/Pretendard-Regular.otf
+          weight: 400
+        - asset: assets/fonts/Pretendard-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Pretendard-SemiBold.otf
+          weight: 600
+        - asset: assets/fonts/Pretendard-Bold.otf
+          weight: 700
+        - asset: assets/fonts/Pretendard-ExtraBold.otf
+          weight: 800
+        - asset: assets/fonts/Pretendard-Black.otf
+          weight: 900
+    - family: PartialSans
+      fonts:
+        - asset: assets/fonts/PartialSansKR-Regular.otf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
