--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,9 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   kakao_flutter_sdk_user: ^1.9.6
-  flutter_dotenv: ^5.0.2
   kakao_flutter_sdk_talk: ^1.9.6
+  kakao_flutter_sdk_share: ^1.9.6
+  flutter_dotenv: ^5.0.2
   http: ^1.2.2
 
 dev_dependencies:
