--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   kakao_flutter_sdk_share: ^1.9.6
   flutter_dotenv: ^5.0.2
   http: ^1.2.2
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
