--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
     - assets/images/temp_icon2x.png
     - assets/images/kakao_login_button.png
     - assets/images/write_icon.png
+    - assets/images/selected_icon.png
     # environment vars.
     - .env
 
